tests/sksl/errors/Ossfuzz44096.glsl

void main() {
    float x;
    ++x * gl_SecondaryFragColorEXT;
}
